# web-crawler

./: .gitignore  Cargo.toml  LICENSE
func/: Cargo.toml
func/src/: crawl.rs  main.rs
src/: main.rs
