[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version="1.29.1", features=["full"] }
url = "2.4.0"
